# py-modbus-web-monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  test.py
.github/workflows/: release.yml  test.yml
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json
11/export/: prometheusData.txt
11/history/: categories-trend.json  history-trend.json  retry-trend.json
11/widgets/: executors.json  suites.json  summary.json
13/: index.html
13/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
13/widgets/: categories-trend.json  duration.json  executors.json  severity.json  summary.json
20/: index.html
20/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
20/export/: influxDbData.txt  prometheusData.txt
20/history/: categories-trend.json  history-trend.json  history.json
20/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
22/: index.html
22/data/: suites.json  timeline.json
22/export/: influxDbData.txt
22/history/: history.json
22/widgets/: executors.json  severity.json  summary.json
24/: index.html
24/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
24/export/: influxDbData.txt  prometheusData.txt
24/widgets/: categories-trend.json  duration.json  executors.json  severity.json  summary.json
26/: index.html
26/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
26/export/: influxDbData.txt  prometheusData.txt
26/history/: duration-trend.json  history-trend.json  history.json
26/widgets/: executors.json  severity.json  status-chart.json  summary.json
29/: index.html
29/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
29/export/: influxDbData.txt  prometheusData.txt
29/history/: history.json
29/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
31/: index.html
31/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
31/export/: influxDbData.txt  prometheusData.txt
31/history/: categories-trend.json  history-trend.json  history.json
31/widgets/: executors.json  severity.json  status-chart.json  summary.json
33/: index.html
33/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
33/export/: influxDbData.txt  prometheusData.txt
33/history/: categories-trend.json  duration-trend.json
33/widgets/: executors.json  severity.json  status-chart.json  summary.json
34/: index.html
34/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
34/export/: influxDbData.txt  prometheusData.txt
34/history/: categories-trend.json  history.json
34/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
5/: index.html
5/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
5/export/: influxDbData.txt  prometheusData.txt
5/history/: history-trend.json
5/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
7/: index.html
7/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
7/export/: influxDbData.txt  prometheusData.txt
7/history/: history-trend.json  history.json
7/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
9/: index.html
9/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
9/export/: influxDbData.txt  prometheusData.txt
9/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
9/widgets/: duration.json  executors.json  severity.json  summary.json
data/: behaviors.json  packages.json  suites.csv  timeline.json
data/test-cases/: 19bcf58c4db5a9ce.json  22d574615ed8971c.json  22d9bfd936e36052.json  23d435d643caac98.json  (+68 more)
debian/: changelog
docs/: api.md  docker.md  logging.md  notebooks.md  packaging.md  quickstart.md  release.md  roadmap.md  simulated-server.md  testing.md
export/: influxDbData.txt  prometheusData.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
history/: duration-trend.json  history.json
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
notebooks/: modbus_readings_analysis.ipynb
scripts/: build_deb.sh  run_local.sh  sync_web_assets.sh  trigger_release.sh
tests/: run_all.py
widgets/: categories-trend.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json
(+205 files in other folders)
