[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modbus-web-monitor"
version = "0.1.0"
description = "FastAPI + WebSocket Modbus monitor with a React UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Andreu Castillo", email = "cp.andreu97@gmail.com" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pymodbus>=3.6",
  "pydantic>=2.6",
  "starlette>=0.37",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.26",
  "pytest>=7.4",
  "ruff>=0.2",
  "black>=24.3",
]

[project.urls]
Homepage = "https://github.com/andcaspe/modbus-web-monitor"
Source = "https://github.com/andcaspe/modbus-web-monitor"

[project.scripts]
modbus-web-monitor = "modbus_web_monitor.main:main"
modbus-sim-server = "modbus_web_monitor.utils.sim_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/modbus_web_monitor"]
include = ["src/modbus_web_monitor/web/**"]

[tool.hatch.build.targets.wheel.force-include]
"src/modbus_web_monitor/web" = "modbus_web_monitor/web"

[tool.hatch.build.targets.sdist]
include = [
  "src/modbus_web_monitor/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"src/modbus_web_monitor/web" = "src/modbus_web_monitor/web"
