[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modbus-web-monitor"
version = "0.1.0"
description = "FastAPI + WebSocket Modbus monitor with a React UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Andreu Castillo", email = "cp.andreu97@gmail.com" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pymodbus>=3.6",
  "pydantic>=2.6",
  "starlette>=0.37",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.26",
  "pytest>=7.4",
  "ruff>=0.2",
  "black>=24.3",
  "isort>=5.13",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "allure-pytest>=2.13",
]
notebooks = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.1",
]
ml = [
  "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://github.com/andcaspe/modbus-web-monitor"
Source = "https://github.com/andcaspe/modbus-web-monitor"

[project.scripts]
modbus-web-monitor = "modbus_web_monitor.main:main"
modbus-sim-server = "modbus_web_monitor.utils.sim_server:main"

[tool.mypy]
python_version = "3.10"
files = ["src/modbus_web_monitor"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]
known_first_party = ["modbus_web_monitor"]

[tool.hatch.build.targets.wheel]
packages = ["src/modbus_web_monitor"]
include = ["src/modbus_web_monitor/web/**"]

[tool.hatch.build.targets.sdist]
include = [
  "src/modbus_web_monitor/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"src/modbus_web_monitor/web" = "src/modbus_web_monitor/web"
